# Pixos2v

./: .env  alembic.ini  create_admin.py  main.py  make_admin.py  pyproject.toml  test_db.py  test_query.py  test_routes.py  update_admin.py
apps/api/: .env  smoke_test.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  24c38109fc65_make_pending_approval_agent_id_nullable.py  25b9274289c8_p0_p1_p5_foundation.py  316f5b59a8cf_make_auditlog_workspace_nullable.py  41b80ada0721_add_chat_models_and_agent_tools.py  65c6b61b927b_phase3_4_policy_models.py  67c7a8b2f128_add_clerk_id_to_user.py  6a25c5d17e39_add_conversation_types_and_team_id.py  6a7e5dbe621b_add_integrations.py  70d6259cc920_add_systemconfig.py  871661c3bcb4_add_billing_models.py  8f418d5314b9_phase8_integrations.py  9969ce40c00b_fix_workflow_models.py  b148b77b0cbb_initial_migration.py  bca528b1ef87_add_stripe_events_idempotency.py  bddd78e2b92f_phase7_agent_collaboration.py  bdf8772816b3_add_fields_to_workspace_auditlog.py  c2957360211b_add_agents_and_teams.py  da729a6edc1a_initial_migration.py  e8edb8e5990a_chat_first_core.py  f1a4b306e155_phase10_stripe_revenue.py  f83dceabf354_add_oauth_fields_to_integrations.py
apps/api/app/: main.py
apps/api/scripts/: seed.py  smoke_test.py
apps/api/tests/: conftest.py  test_approvals.py  test_core.py  test_smoke.py  test_workflows.py
apps/web/: package-lock.json  package.json
apps/web/src/: middleware.ts  proxy.ts
apps/worker/app/: celery_app.py
docs/: production-readiness-report.md
infra/: docker-compose.yml
(+89 files in other folders)
