[project]
name = "pixel-agents-2v-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "litellm>=1.86.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "stripe>=15.1.0",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.48.0",
]
